tante belle modifiche per activities, aggiunto il sort  e il paginator, ma manca ancora tutto lo stile
