# api-docs.json
@@ -1058,7 +1058,10 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/OperationListsWrapper"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/OperationDTO"
+                  }
                 }
               }
             }
@@ -1071,8 +1074,8 @@
         "tags": [
           "operation-controller"
         ],
-        "summary": "Get all Operations by Vault Id - ADMIN",
-        "description": "Get all Operations by Vault given",
+        "summary": "Get all Operations by Vault Id",
+        "description": "Get all Operations by Vault ",
         "operationId": "getAllOperationsByVaultId",
         "parameters": [
           {
@@ -1089,9 +1092,37 @@
           "200": {
             "description": "OK",
             "content": {
-              "*/*": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/OperationListsWrapper"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/OperationDTO"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/operation-management/operations/principal": {
+      "get": {
+        "tags": [
+          "operation-controller"
+        ],
+        "summary": "Get all Operations by principal",
+        "description": "Get all Operations by principal",
+        "operationId": "getAllOperationsByPrincipal",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/OperationDTO"
+                  }
                 }
               }
             }
@@ -1472,20 +1503,154 @@
           }
         }
       },
-      "OperationListsWrapper": {
+      "Category": {
+        "required": [
+          "categoryName"
+        ],
         "type": "object",
         "properties": {
-          "listExpense": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/ExpenseDTO"
-            }
+          "createdDate": {
+            "type": "string",
+            "format": "date-time"
           },
-          "listRevenue": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/RevenueDTO"
-            }
+          "lastModifiedDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "categoryName": {
+            "type": "string"
+          }
+        }
+      },
+      "OperationDTO": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "causal": {
+            "type": "string"
+          },
+          "amount": {
+            "type": "number"
+          },
+          "isProgrammed": {
+            "type": "boolean"
+          },
+          "startDate": {
+            "type": "string",
+            "format": "date"
+          },
+          "endDate": {
+            "type": "string",
+            "format": "date"
+          },
+          "vault": {
+            "$ref": "#/components/schemas/Vault"
+          },
+          "category": {
+            "$ref": "#/components/schemas/Category"
+          },
+          "thirdPartys": {
+            "$ref": "#/components/schemas/ThirdParty"
+          }
+        }
+      },
+      "ThirdParty": {
+        "required": [
+          "thirdPartyName"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "thirdPartyName": {
+            "type": "string"
+          }
+        }
+      },
+      "User": {
+        "required": [
+          "dob",
+          "firstName",
+          "imgProfile",
+          "lastName",
+          "role"
+        ],
+        "type": "object",
+        "properties": {
+          "createdDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "lastModifiedDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "dob": {
+            "type": "string",
+            "format": "date"
+          },
+          "imgProfile": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string",
+            "enum": [
+              "GUEST",
+              "ADMIN"
+            ]
+          }
+        }
+      },
+      "Vault": {
+        "required": [
+          "capital",
+          "image",
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "createdDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "lastModifiedDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "name": {
+            "type": "string"
+          },
+          "user": {
+            "$ref": "#/components/schemas/User"
+          },
+          "capital": {
+            "type": "number"
+          },
+          "image": {
+            "type": "string"
           }
         }
       }
