# src/app/api/models.ts
@@ -1,12 +1,16 @@
 /* tslint:disable */
 /* eslint-disable */
 export { AuthResponse } from './models/auth-response';
+export { Category } from './models/category';
 export { CategoryDto } from './models/category-dto';
 export { CredentialDto } from './models/credential-dto';
 export { ExpenseDto } from './models/expense-dto';
 export { LoginRequest } from './models/login-request';
-export { OperationListsWrapper } from './models/operation-lists-wrapper';
+export { OperationDto } from './models/operation-dto';
 export { RevenueDto } from './models/revenue-dto';
+export { ThirdParty } from './models/third-party';
 export { ThirdPartyDto } from './models/third-party-dto';
+export { User } from './models/user';
 export { UserDto } from './models/user-dto';
+export { Vault } from './models/vault';
 export { VaultDto } from './models/vault-dto';
