# src/app/api/models/user.ts
@@ -1,0 +1,12 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface User {
+  createdDate?: string;
+  dob: string;
+  firstName: string;
+  id?: number;
+  imgProfile: string;
+  lastModifiedDate?: string;
+  lastName: string;
+  role: 'GUEST' | 'ADMIN';
+}
